--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -482,15 +482,15 @@
 			"pending_removal_plural": "Pending removals"
 		},
 		"power": {
-            "capacity": "Capacity (mAh)",
-            "charged": "Charged %",
-            "condition": "Condition",
-            "current": "Current (mAh)",
-            "cycles": "Cycles",
-            "designed": "Designed (mAh)",
-            "health": "Health %",
-            "failedbattery": "Failed Battery",
-            "manufactured": "Manufactured"
+			"capacity": "Capacity",
+			"charged": "Charged %",
+			"condition": "Condition",
+			"current": "Current",
+			"cycles": "Cycles",
+			"designed": "Designed",
+			"health": "Health %",
+			"failedbattery": "Failed Battery",
+			"manufactured": "Manufactured"
         },
 		"profile": {
             "payload": "Payloads",
@@ -613,6 +613,7 @@
 			"ard": "Apple Remote Desktop",
 			"bluetooth": "Bluetooth",
 			"backup2go": "Archiware Backup2Go",
+			"batteries": "Batteries",
 			"caching": "Caching",
 			"clients": "Clients",
 			"certificate": "Certificates",
@@ -732,14 +733,108 @@
 	"pkg_failed_to_install": "__pkg__ failed to install: __reason__",
 	"pkg_failed_to_install_plural": "__count__ packages failed to install",
 	"power": {
+		"standbydelay": "Standby Delay",
+		"standby": "Standby",
+		"womp": "Wake-on-Magic-Packet",
+		"halfdim": "Reduce Brigtness on Battery",
+		"hibernatefile": "Hibernate File Path",
+		"gpuswitch": "GPU",
+		"sms": "Sudden Motion Sensor",
+		"networkoversleep": "Network Over Sleep",
+		"disksleep": "Disk Sleep",
+		"sleep": "Sleep",
+		"autopoweroffdelay": "Auto Power Off Delay",
+		"hibernatemode": "Hibernate Mode",
+		"sms_short": "SMS",
+		"womp_short": "WoMP",
+		"destroyfvkeyonstandby_short": "Destroy FV Keys on Standby",
+		"autopoweroff": "Auto Power Off",
+		"ttyskeepawake": "TTY Keep Awake",
+		"displaysleep": "Display Sleep",
+		"acwake": "AC Wake",
+		"lidwake": "Lid Wake",
+		"sleep_on_power_button": "Sleep on Power Button",
+		"powernap": "Power Nap",
+		"autorestart": "Auto Restart",
+		"destroyfvkeyonstandby": "Destroy FileVault Keys on Standby",
+		"schedule": "Repeating Scheduled Events",
+		"haltlevel": "UPS Shut Down/Sleep Level",
+		"haltafter": "UPS Shut Down/Sleep After",
+		"haltremain": "UPS Shut Down/Sleep with % Remaining",
+		"sleep_count": "Sleep Counts Since Boot",
+		"dark_wake_count": "Dark Wake Count",
+		"user_wake_count": "User Wake Count",
+		"cpu_scheduler_limit": "CPU Scheduler Limit",
+		"cpu_available_cpus": "Available CPUs",
+		"cpu_speed_limit": "CPU Speed Limit",
+		"combined_sys_load": "Combined System Load",
+		"user_sys_load": "User System Load",
+		"battery_level": "Battery Level",
+		"thermal_level": "Thermal Level",
+		"backgroundtask": "Background Task",
+		"applepushservicetask": "Apple Push Service Task",
+		"userisactive": "User is Active",
+		"preventuseridledisplaysleep": "Prevent User Idle Display Sleep",
+		"preventsystemsleep": "Prevent System Sleep",
+		"externalmedia": "External Media",
+		"preventuseridlesystemsleep": "Prevent User Idle System Sleep",
+		"networkclientactive": "Network Client Active",
+		"sleep_prevented_by": "Sleep Prevented By",
+		"ups_name": "UPS Name",
+		"active_profile": "Active Power Profile",
+		"ups_percent": "UPS Charge Level",
+		"ups_charging_status": "UPS Charging Status",
+		"battery_report": "Batteries Report",
 		"manufacture_date": "Manufactured",
-		"design_capacity": "Design Capacity (mAh)",
-		"max_capacity": "Full Charge Capacity (mAh)",
+		"design_capacity": "Design Capacity",
+		"max_capacity": "Full Charge Capacity",
 		"max_percent": "Health %",
-		"current_capacity": "Charge Remaining (mAh)",
+		"current_capacity": "Charge Remaining",
 		"current_percent": "Charged %",
 		"cycle_count": "Cycle Count",
 		"temperature": "Temperature",
+		"wattage": "Wattage",
+		"ups_status": "UPS Status",
+		"assertions": "Power Assertions",
+		"thermal_load": "Thermal Load",
+		"general_info": "General Information",
+		"power_settings": "Power Settings",
+		"integrated": "Integrated GPU",
+		"auto_gpu": "Automatic",
+		"safe_sleep": "Safe Sleep",
+		"sleep": "Sleep",
+		"hibernate": "Hibernate",
+		"never": "Never",
+		"charging": "Charging",
+		"ac_power": "AC Power",
+		"battery": "Battery",
+		"battery_power": "Battery Power",
+		"discharging": "Discharging",
+		"minute": "minute",
+		"minutes": "minutes",
+		"discreet": "Discreet GPU",
+		"externalconnected": "Power Adapter Connected",
+		"timeremaining": "Estimated Time Remaining",
+		"instanttimetoempty": "Estimated Instant Time Remaining",
+		"cellvoltage": "Cell Voltage Levels",
+		"voltage": "Battery Voltage Level",
+		"permanentfailurestatus": "Battery Has Permanently Failed",
+		"manufacturer": "Battery Manufacturer",
+		"packreserve": "Battery Reserve Power",
+		"avgtimetofull": "Average Time to Full",
+		"batteryserialnumber": "Battery Serial Number",
+		"instantamperage": "Instant Amperage",
+		"fullycharged": "Fully Charged",
+		"amperage": "Amperage",
+		"ischarging": "Is Charging",
+		"designcyclecount": "Design Cycle Count",
+		"avgtimetoempty": "Estimated Average Time Remaining",
+		"adapter": "Power Adapter",
+		"adapter_wattage": "Adapter Wattage",
+		"watts": "Watts",
+		"adapter_id": "Adapter ID",
+		"family_code": "Adaptr Family Code",
+		"adapter_serial_number": "Adapter Serial Number",
 		"condition": "Condition"
 	},
 	"ratio": "Ratio",
@@ -1012,6 +1107,7 @@
 			"tooltip": "Pending installs for this week"
 		},
 		"power": {
+			"battery": "Battery",
 			"check": "Check Battery",
 			"health": {
 				"title": "Battery Health",
