Removed amperage value
It didn't collect useful information

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -823,9 +823,8 @@
 		"packreserve": "Battery Reserve Power",
 		"avgtimetofull": "Average Time to Full",
 		"batteryserialnumber": "Battery Serial Number",
-		"instantamperage": "Instant Amperage",
+		"instantamperage": "Amperage",
 		"fullycharged": "Fully Charged",
-		"amperage": "Amperage",
 		"ischarging": "Is Charging",
 		"designcyclecount": "Design Cycle Count",
 		"avgtimetoempty": "Estimated Average Time Remaining",
