Fixed amps and added dis/charging watts to battery-tab

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -810,6 +810,8 @@
 		"battery": "Battery",
 		"battery_power": "Battery Power",
 		"discharging": "Discharging",
+		"charging_watt": "Charging at ",
+		"discharging_watt": "Discharging at",
 		"minute": "minute",
 		"minutes": "minutes",
 		"discreet": "Discreet GPU",
@@ -831,6 +833,8 @@
 		"adapter": "Power Adapter",
 		"adapter_wattage": "Adapter Wattage",
 		"watts": "Watts",
+		"amps": "Amps",
+		"volts": "Volts",
 		"adapter_id": "Adapter ID",
 		"family_code": "Adaptr Family Code",
 		"adapter_serial_number": "Adapter Serial Number",
