--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -417,6 +417,7 @@
 	"last_user": "Last User",
 	"listing": {
 		"appusage": {
+			"activation": "Activation",
 			"appname": "App Name",
 			"appusage": "App Usage",
 			"appusagereport": "App Usage Report",
